WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222889
[GStreamer] CaptureDevice monitoring is not implemented
https://bugs.webkit.org/show_bug.cgi?id=222889
Summary
[GStreamer] CaptureDevice monitoring is not implemented
Philippe Normand
Reported
2021-03-07 11:00:55 PST
In GStreamerCaptureDeviceManager: // FIXME: Add monitor for added/removed messages on the bus.
Attachments
Patch
(8.64 KB, patch)
2021-03-21 09:51 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(8.64 KB, patch)
2021-04-12 09:07 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-03-21 09:51:03 PDT
Created
attachment 423829
[details]
Patch
Xabier Rodríguez Calvar
Comment 2
2021-03-22 04:24:40 PDT
Comment on
attachment 423829
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423829&action=review
> Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:155 > + break;
Nit: you could avoid this break.
> Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:158 > + break;
And maybe this one.
Philippe Normand
Comment 3
2021-03-22 04:34:06 PDT
Comment on
attachment 423829
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423829&action=review
>> Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:155 >> + break; > > Nit: you could avoid this break.
But then we fall through the final return and don't fill the devices list at all?
>> Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:158 >> + break; > > And maybe this one.
We don't want to fall-through and return early though :)
Xabier Rodríguez Calvar
Comment 4
2021-03-22 05:54:24 PDT
Comment on
attachment 423829
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423829&action=review
>>> Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:155 >>> + break; >> >> Nit: you could avoid this break. > > But then we fall through the final return and don't fill the devices list at all?
True, you could remove this one but keep the second.
Philippe Normand
Comment 5
2021-04-12 09:07:57 PDT
Created
attachment 425755
[details]
Patch
EWS
Comment 6
2021-04-13 03:53:08 PDT
Committed
r275878
(
236443@main
): <
https://commits.webkit.org/236443@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425755
[details]
.
Radar WebKit Bug Importer
Comment 7
2021-04-13 03:54:13 PDT
<
rdar://problem/76585693
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug