[GStreamer] CaptureDevice monitoring is not implemented https://bugs.webkit.org/show_bug.cgi?id=222889

Patch by Philippe Normand <pnormand@igalia.com> on 2021-04-13
Reviewed by Xabier Rodriguez-Calvar.

GStreamer capture device events are notified through a message bus associated to the the
GstDeviceMonitor, so we need to watch out for those messages and notify the
RealtimeSourceMediaCenter accordingly.

* platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:
(WebCore::GStreamerCaptureDeviceManager::~GStreamerCaptureDeviceManager):
(WebCore::GStreamerCaptureDeviceManager::captureDevices):
(WebCore::GStreamerCaptureDeviceManager::addDevice):
(WebCore::GStreamerCaptureDeviceManager::refreshCaptureDevices):
* platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.h:

Canonical link: https://commits.webkit.org/236443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275878 268f45cc-cd09-0410-ab3c-d52691b4dbfc